--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
     "author": "",
     "description": "",
     "devDependencies": {
-        "markdown-it": ">=13.0.0",
+        "markdown-it": "^13.0.1",
         "markdownlint-cli": "^0.34.0",
-        "pyright": "<1.1.306"
+        "pyright": "^1.1.305"
     },
     "license": "",
     "main": "",
     "name": "pyright-exec",
     "scripts": {
+        "preinstall": "npx only-allow pnpm",
         "pyright": "pyright"
     },
     "version": "1.0.0"
