--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
     "author": "",
     "description": "",
     "devDependencies": {
-        "markdown-it": "^13.0.1",
+        "markdown-it": "^13.0.2",
         "markdownlint-cli": "^0.34.0",
-        "pyright": "^1.1.305"
+        "pyright": "^1.1.329"
+    },
+    "engines": {
+        "npm": "Use pnpm instead of npm!"
     },
     "license": "",
     "main": "",
