--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,12 @@ opencv-python = "^4.7.0.72"
 numpy = "^1.24.3"
 torch = ">=2.1.0"
 huggingface-hub = "^0.15.1"
-tqdm = "^4.65.0"
 pillow = "^9.5.0"
 onnxruntime = { version = "^1.16.1", optional = true }
 onnxruntime-gpu = { version = "^1.16.1", optional = true }
 onnx = {version="^1.14.0", optional = true }
 pydantic = "^1.10.9"
+rich = "^13.7.0"
 
 [tool.poetry.extras]
 convert = ["onnx"]
