--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,13 +32,9 @@ gpu = ["onnxruntime-gpu"]
 text = ["transformers", "bitsandbytes", "accelerate"]
 
 [tool.poetry.group.dev.dependencies]
-black = "^22.12.0"
-isort = "^5.12.0"
-toml = "^0.10.2"
-flake8 = ">=5.0.4"
-pydocstyle = ">=6.1.1"
 pytest = "^7.2.1"
 yamllint = "^1.32.0"
+ruff = "^0.1.13"
 
 [build-system]
 requires = ["poetry-core"]
@@ -55,9 +51,14 @@ exclude = [".venv", "**/node_modules", "**/__pycache__",]
 reportPrivateImportUsage = "information"
 reportUnusedVariable="warning"
 
-[tool.black]
+[tool.ruff]
 line-length = 120
+target-version = "py311"
 
-[tool.isort]
-profile = "black"
-line_length = 120
+[tool.ruff.lint]
+select = ["E", "F", "W", "B"]
+ignore = []
+fixable = ["ALL"]
+
+[tool.ruff.isort]
+force-single-line = true
