--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,12 +53,9 @@ reportUnusedVariable="warning"
 
 [tool.ruff]
 line-length = 120
-target-version = "py311"
+target-version = "py39"
 
 [tool.ruff.lint]
-select = ["E", "F", "W", "B"]
+select = ["E", "F", "W", "I", "B", "UP"]
 ignore = []
 fixable = ["ALL"]
-
-[tool.ruff.isort]
-force-single-line = true
