--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,8 +33,8 @@ text = ["transformers", "bitsandbytes", "accelerate"]
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.2.1,<9.0.0"
-yamllint = "^1.32.0"
-ruff = "^0.2.1"
+yamllint = ">=1.32.0"
+ruff = ">=0.2.1"
 
 [build-system]
 requires = ["poetry-core"]
