--- a/.github/workflows/typos.yml
+++ b/.github/workflows/typos.yml
@@ -5,8 +5,10 @@ name: Typos
 on:  # yamllint disable-line rule:truthy
   push:
   pull_request:
-    branches:
-      - '**'
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   build:
@@ -16,4 +18,4 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: typos-action
-        uses: crate-ci/typos@v1.21.0
+        uses: crate-ci/typos@v1.22.9
