--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,13 @@ packages = [{include = "img2tags"}]
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 opencv-python = "^4.7.0.72"
-numpy = "^1.24.3"
+numpy = ">=1.24.3"
 torch = ">=2.1.0"
 huggingface-hub = ">=0.15.1"
 pillow = "^10.2.0"
-onnxruntime = { version = "^1.16.1", optional = true }
-onnxruntime-gpu = { version = "^1.16.1", optional = true }
-onnx = {version="^1.14.0", optional = true }
+onnxruntime = { version = ">=1.16.1", optional = true }
+onnxruntime-gpu = { version = ">=1.16.1", optional = true }
+onnx = {version=">=1.14.0", optional = true }
 pydantic = "^2.6.1"
 rich = "^13.7.0"
 accelerate = {version = ">=0.22.0", optional = true}
