--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,51 +1,55 @@
-[tool.poetry]
+[project]
 name = "img2tags"
 version = "1.6.2"
-description = "Tag images"
-authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
+authors = [{author="Yuta Hayashibe", email = "yuta@hayashibe.jp"}]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/shirayu/img2tags"
 repository = "https://github.com/shirayu/img2tags"
-packages = [{include = "img2tags"}]
+requires-python = ">=3.10,<3.13"
+dependencies = [
+    "huggingface-hub>=0.25.0",
+    "numpy>=2.1.1",
+    "opencv-python>=4.10.0.84",
+    "pillow>=10.4.0",
+    "pydantic>=2.9.2",
+    "rich>=13.8.1",
+    "torch>=2.4.1",
+]
 
-[tool.poetry.dependencies]
-python = ">=3.9,<3.13"
-opencv-python = "^4.7.0.72"
-numpy = ">=1.24.3"
-torch = ">=2.1.0"
-huggingface-hub = ">=0.15.1"
-pillow = "^10.2.0"
-onnxruntime = { version = ">=1.16.1", optional = true }
-onnxruntime-gpu = { version = ">=1.16.1", optional = true }
-onnx = {version=">=1.14.0", optional = true }
-pydantic = "^2.6.1"
-rich = "^13.7.0"
-accelerate = {version = ">=0.22.0", optional = true}
-transformers = {version = ">=4.34.0", optional = true}
-bitsandbytes = {version = ">=0.41.1", optional = true}
-
-[tool.poetry.extras]
-convert = ["onnx"]
-cpu = ["onnxruntime"]
-gpu = ["onnxruntime-gpu"]
-text = ["transformers", "bitsandbytes", "accelerate"]
-
-[tool.poetry.group.dev.dependencies]
-pytest = ">=7.2.1,<9.0.0"
-yamllint = ">=1.32.0"
-ruff = ">=0.2.1"
+[project.optional-dependencies]
+convert = [
+    "onnx>=1.16.2",
+]
+cpu = [
+    "onnxruntime>=1.19.2",
+]
+gpu = [
+    "onnxruntime-gpu>=1.19.2",
+]
+text = [
+    "accelerate>=0.34.2",
+    "bitsandbytes>=0.43.3",
+    "transformers>=4.44.2",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
-[tool.poetry.scripts]
+[tool.uv]
+dev-dependencies = [
+    "accelerate>=0.34.2",
+    "ruff>=0.6.6",
+    "yamllint>=1.35.1",
+]
+
+[project.scripts]
 img2tags = "img2tags.img2tags:main"
 img2text = "img2tags.img2text:main"
 
 [tool.pyright]
-pythonVersion = "3.9"
+pythonVersion = "3.10"
 typeCheckingMode = "basic"
 exclude = [".venv", "**/node_modules", "**/__pycache__",]
 reportPrivateImportUsage = "information"
@@ -53,7 +57,7 @@ reportUnusedVariable="warning"
 
 [tool.ruff]
 line-length = 120
-target-version = "py39"
+target-version = "py310"
 
 [tool.ruff.lint]
 select = ["E", "F", "W", "I", "B", "UP"]
