--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
         "preinstall": "npx only-allow pnpm",
         "pyright": "pyright"
     },
+    "packageManager": "pnpm@9.11.0",
     "version": "1.6.3"
 }
