--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "devDependencies": {
         "markdown-it": "^14.1.0",
         "markdownlint-cli": "^0.42.0",
-        "pyright": "^1.1.382"
+        "pyright": "^1.1.383"
     },
     "engines": {
         "npm": "Use pnpm instead of npm!"
@@ -16,6 +16,6 @@
         "preinstall": "npx only-allow pnpm",
         "pyright": "pyright"
     },
-    "packageManager": "pnpm@9.11.0",
+    "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b",
     "version": "1.6.3"
 }
