--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,45 +1,41 @@
+---
 version: '3'
-
-vars:
-  TARGET_DIRS: ./img2tags
 
 tasks:
   default:
-    deps: [all_for_ci, typo_check]
+    deps: [format, lint, test]
 
-  all_for_ci:
-    deps: [lint_node, lint_python]
+  format:
+    cmds:
+      - ruff format --respect-gitignore
+      - ruff check --fix
+      - pnpm format
 
-  lint_python:
-    deps: [ruff, yamllint]
+  lint:
+    deps: [lint_yaml]
+    cmds:
+      - ruff format --respect-gitignore --check
+      - ruff check --respect-gitignore
+      - pnpm lint
 
-  lint_node:
-    deps: [markdownlint, pyright]
-
-
-  yamllint:
+  lint_yaml:
     cmds:
       - >-
         find . \( -name node_modules -o -name .venv \) \
           -prune -o -type f -name '*.yml' -print \
-        | xargs yamllint --no-warnings
+        | xargs yamllint --no-warnings -c .yamllint.yml
 
-  ruff:
-    cmds:
-      - ruff format --respect-gitignore --check
-      - ruff check --respect-gitignore
-
-  pyright:
-    cmds:
-      - npx pyright
-
-  markdownlint:
+  lint_shell:
     cmds:
       - >-
-        find . -type d \( -name node_modules -o -name .venv \) \
-          -prune -o -type f -name '*.md' -print \
-        | xargs npx markdownlint --config ./.markdownlint.json
+        find . \( -name node_modules -o -name .venv \) \
+          -prune -o -type f -name '*.yml' -print \
+        | xargs shellcheck
 
-  typo_check:
+  lint_typos:
     cmds:
       - typos -V && typos
+
+  test:
+    cmds:
+      - pnpm test
