--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: "Set up Python"
+        id: setup-python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v6
         with:
@@ -36,7 +42,7 @@ jobs:
         name: Setup pnpm cache
         with:
           path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-uv-store-${{ hashFiles('**/uv.lock') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
 
