--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ gpu = ["onnxruntime-gpu>=1.19.2"]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.uv]
-dev-dependencies = ["accelerate>=0.34.2", "ruff>=0.9.6", "yamllint>=1.35.1"]
+[dependency-groups]
+dev = ["accelerate>=0.34.2", "ruff>=0.9.6", "yamllint>=1.35.1"]
 
 [project.scripts]
 img2tags = "img2tags.img2tags:main"
